--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -130,7 +130,17 @@
   justify-content: space-between;
 }
 .form {
-  padding: 5rem;
+  padding: 3rem;
+}
+.form .head-section{
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.form .head-section img{
+  width: 210px;
+}
+.form .head-section h2{
+  margin-top: 1rem;
 }
 .form-icon {
   position: absolute;
@@ -143,7 +153,7 @@
 }
 .form-section {
   border: 1px solid rgb(215 208 208);
-  border-radius: 47px;
+  border-radius: 15px;
   overflow: hidden;
   box-shadow: 0px 0px 18px 2px rgb(68 68 68 / 41%);
 }
@@ -156,6 +166,13 @@
   right: 0;
   background: var(--text-white);
 }
+.form-ul .active{
+  background: var(--primary);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  color: white !important;
+  border-radius: 6px;
+}
 .form-ul a {
   padding: 0.5rem;
   text-decoration: none;
@@ -167,7 +184,7 @@
 .btn-custom {
   background: var(--primary) !important;
   color: var(--text-white) !important;
-  border-radius: 28px !important;
+  border-radius: 5px !important;
 }
 .log-form-bg-image {
   background: url(../images/register.png);
@@ -188,6 +205,18 @@
 .form-image {
   height: 100%;
   border-radius: 5px;
+}
+.form-section .form-ul a{
+  font-weight: bold;
+  color: #000;
+}
+.anchor{
+  color: var(--primary);
+  text-decoration: none;
+  font-size: 17px !important;
+}
+.anchor:hover{
+  color: var(--primary);
 }
 .section-margin {
   margin: 10rem 0;
@@ -237,12 +266,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background: var(--text-white);
   -webkit-appearance: none;
 }
-.form-control {
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
-  border-bottom: 1px solid var(--primary) !important;
-}
+
 .AuthFormCheckbox_checkmark_A7HnL {
   position: absolute;
   top: 0;
@@ -285,12 +309,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   content: "";
   position: absolute;
 }
-.form-control:focus {
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
-  box-shadow: none !important;
-}
+
 .footer-icon a {
   margin-left: 0.75em;
   align-items: center;
@@ -699,6 +718,13 @@ footer {
 .swapping .swap {
   border-radius: 50%;
   margin-top: 1rem;
+}
+.form-control{
+  height: 50px;
+}
+.form-control:focus{
+  border: 1px solid var(--primary) !important;
+  box-shadow: none !important;
 }
 .swapping .label {
   font-size: 20px;
