--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -414,8 +414,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-weight: 600;
 }
 
-.dual-heading span {
+.dual-heading span,
+.dual-heading-sm span {
   color: var(--primary);
+}
+
+.dual-heading-sm {
+  font-size: 30px;
+  color: var(--text-black);
+  font-weight: 600;
 }
 
 .heading-border hr {
@@ -424,6 +431,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   height: 3px !important;
   color: var(--primary);
   opacity: 1 !important;
+}
+.heading-border p {
+  color: var(--text-disable);
+  font-weight: 600;
+  margin: 20px 0;
 }
 
 .banner-img {
@@ -435,6 +447,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-radius: 10px;
   padding: 1rem 2rem !important;
   text-decoration: none;
+  display: inline-block;
 }
 
 .custom-icon-btn {
@@ -450,7 +463,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .custom-btn-sm {
   margin-right: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 0.5rem 2rem !important;
   text-decoration: none;
   color: var(--text-white);
@@ -493,11 +506,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   content: "";
   width: 0;
   height: 100%;
-  right: 0;
+  left: 0;
   top: 0;
   background: var(--text-white);
   z-index: -1;
   transition: all 0.5s ease-in-out;
+  border-radius: 10px;
 }
 
 .primary-btn:hover:after {
@@ -515,11 +529,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   content: "";
   width: 0;
   height: 100%;
-  right: 0;
+  left: 0;
   top: 0;
   background: var(--primary);
   z-index: -1;
   transition: all 0.5s ease-in-out;
+  border-radius: 10px;
 }
 
 .secondary-btn:hover:after {
@@ -545,41 +560,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   justify-content: space-between;
   /* margin: 0 6rem; */
-}
-
-.market-box {
-  background-color: var(--primary);
-  border-top: 2px solid;
-  border-bottom: 2px solid;
-  border-left: 1px solid;
-  border-right: 1px solid;
-  border-color: var(--text-black);
-  padding: 20px;
-  color: var(--text-white);
-}
-
-.market-box img {
-  width: 35px;
-  margin-right: 10px;
-}
-
-.market-data P {
-  margin: 0;
-}
-
-.market-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20px 0;
-}
-
-.market-footer p {
-  margin: 0;
-}
-
-.market-change p:last-child {
-  color: var(--text-green);
 }
 
 .mar-icon {
@@ -667,12 +647,26 @@ span.text {
   color: var(--text-red);
 }
 
+.primary-a {
+  color: var(--primary);
+  text-decoration: none;
+}
+
+.primary-a:hover {
+  color: var(--text-black);
+}
+
 td {
   color: var(--text-black);
   font-weight: 500;
   text-align: left;
-  padding: 20px !important;
+  padding: 20px 0 !important;
 }
+
+th {
+  padding: 20px 0 !important;
+}
+
 .t-heading {
   border: none !important;
 }
@@ -903,6 +897,14 @@ footer {
   border: 1px solid var(--primary) !important;
   box-shadow: none !important;
 }
+
+.form-control::placeholder {
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--text-disable) !important;
+}
+
 .swapping .label {
   font-size: 20px;
   color: var(--text-black);
@@ -1084,11 +1086,81 @@ footer {
 
 /* WASI NEW*/
 
+.market-box {
+  background-color: var(--primary);
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-color: var(--text-black);
+  padding: 20px;
+  color: var(--text-white);
+}
+
+.market-box img {
+  width: 35px;
+  margin-right: 10px;
+}
+
+.market-data P {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.market-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.market-footer p {
+  margin: 0;
+}
+
+.market-box-two {
+  background-color: var(--text-white);
+  padding: 30px;
+  color: var(--text-black);
+  border-radius: 13px;
+  box-shadow: var(--shadow);
+}
+
+.market-box-two img {
+  margin-right: 15px;
+  flex-basis: 15%;
+}
+
+.market-box-two .market-data {
+  flex-basis: 85%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.market-footer a {
+  border: 1px solid var(--text-black);
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--text-black);
+  background: var(--text-disable);
+  transition: all 0.5s;
+}
+
+.market-footer a:hover {
+  color: var(--text-black);
+  background: var(--text-white);
+}
+
 .loosers-gainers-tabs {
   border: none !important;
 }
 
-.loosers-gainers-tabs .nav-link {
+.nav-tabs .nav-link {
   color: var(--text-disable);
   font-weight: 600;
 }
@@ -1185,23 +1257,62 @@ footer {
   height: 2px !important;
   opacity: 1 !important;
 }
-.react-tel-input .form-control{
+.react-tel-input .form-control {
   height: 50px !important;
-    width: 100% !important;
+  width: 100% !important;
 }
 .search-box {
   width: auto !important;
   margin: 0px auto !important;
 }
-.form-top-bar{
+.form-top-bar {
   padding: 1rem 1rem 0rem 1rem;
 }
-.form-secion-margin{
-    margin: 3rem 0;
+.form-secion-margin {
+  margin: 3rem 0;
 }
-.css-1pahdxg-control:hover{
+.css-1pahdxg-control:hover {
   border-color: var(--primary) !important;
 }
-.modal-content{
+.modal-content {
   border-radius: 10px !important;
+}
+
+.welcome-sc img {
+  width: 500px;
+}
+
+.search-coins {
+  position: relative;
+  width: 50%;
+  margin: 3rem auto;
+}
+
+.search-coins input {
+  padding-left: 40px;
+}
+
+.search-coins i {
+  position: absolute;
+  bottom: 0;
+  transform: translate(15px, -100%);
+  color: var(--text-disable);
+}
+
+.grey-bg {
+  background: var(--text-disable);
+  padding: 3rem 0;
+}
+
+.table > :not(:first-child) {
+  border-top: 1px solid var(--text-black) !important;
+}
+
+.star {
+  color: #f0b90b;
+}
+
+.nav-link img {
+  width: 22px;
+  margin-right: 8px;
 }
