--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -208,7 +208,7 @@ button:disabled:hover {
 }
 .form-icon {
   position: absolute;
-  top: 22px;
+  top: 16px;
   right: 15px;
   color: var(--primary);
 }
@@ -383,7 +383,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding: 0.5em;
   cursor: pointer;
 }
-.active {
+.custom-link.nav-link.active {
   color: var(--primary) !important;
 }
 
@@ -834,9 +834,7 @@ footer {
   border-radius: 50%;
   border: 1px solid var(--text-black) !important;
 }
-.dashboard-section {
-  margin-top: 5rem;
-}
+
 .swap-link {
   text-decoration: none;
   color: var(--text-black);
@@ -1025,9 +1023,6 @@ footer {
 .search-box .input-group button {
   border-left: none;
   border: 1px solid #ababab !important;
-}
-.dashboard-section {
-  margin-bottom: 2rem;
 }
 
 .modal-dialog-centered .modal-body .input-group {
@@ -1222,7 +1217,7 @@ footer {
   z-index: 1;
 }
 
-.box-bg::after {
+.box-bg::after,.big-bg::after {
   position: absolute;
   content: "";
   width: 100%;
@@ -1267,6 +1262,16 @@ footer {
 }
 .form-top-bar {
   padding: 1rem 1rem 0rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.form-top-bar i{
+  font-size: 20px;
+  cursor: pointer;
+}
+.form-top-bar i:hover{
+  color: var(--primary);
 }
 .form-secion-margin {
   margin: 3rem 0;
@@ -1315,4 +1320,14 @@ footer {
 .nav-link img {
   width: 22px;
   margin-right: 8px;
+}
+.form-slash i{
+  transform: rotate(
+    51deg
+    );
+        font-size: 25px;
+        font-weight: bolder;
+}
+.container-fluid{
+  padding: 0 2rem !important;
 }
