--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -1382,7 +1382,9 @@ footer {
   margin-right: 8px;
 }
 .form-slash i {
-  transform: rotate(51deg);
+  transform: rotate(
+    52deg
+    );
   font-size: 25px;
   font-weight: bolder;
 }
@@ -1423,7 +1425,6 @@ footer {
 }
 
 .security-verify-modal .modal-body {
-  text-align: center;
   padding: 30px 50px;
 }
 
