--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -233,3 +233,9 @@
 .toggle-switch input[type="checkbox"]:checked + .switch {
   background-color: var(--primary);
 }
+.react-tel-input .country-list .country{
+  text-align: left;
+}
+.text-left{
+  text-align: left;
+}
