--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -185,6 +185,10 @@
   color: var(--text-black);
 }
 
+.back-link a i {
+  margin-right: 8px;
+}
+
 .disable-warnings ul {
   padding-left: 1rem;
 }
@@ -233,58 +237,10 @@
 .toggle-switch input[type="checkbox"]:checked + .switch {
   background-color: var(--primary);
 }
-.react-tel-input .country-list .country{
+.react-tel-input .country-list .country {
   text-align: left;
 }
-.text-left{
+.text-left {
   text-align: left;
 }
 
-.verification {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin: 70px 0 120px 0;
-}
-
-.verification-item {
-  position: relative;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.verification-item .verification-content {
-  margin-bottom: 0;
-  position: absolute;
-  top: 120%;
-  /* left: 0%;
-  width: 200px; */
-}
-
-.verification-circle {
-  border: 1px solid var(--primary);
-  border-radius: 50%;
-  width: 70px;
-  height: 70px;
-  color: var(--secondary);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.verification-hr {
-  background-color: var(--primary);
-  border-color: var(--primary);
-  width: 150px;
-  height: 1px !important;
-  margin: 0;
-  opacity: 1 !important;
-}
-
-.circle-done {
-  background-color: var(--primary);
-  color: var(--text-white);
-}
