--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -7,6 +7,7 @@
   --text-green: #6bbf0e;
   --shadow: 1px 1px 9px 2px #00000061;
   --light-bg: #f5f5f5;
+  --gray : #838383;
 }
 
 body {
@@ -1415,4 +1416,321 @@ footer {
 
 .modal-box-verify a:hover:after {
   height: 100%;
+}
+
+.verification {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 70px 0 120px 0;
+}
+
+.verification-item {
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.verification-item .verification-content {
+  margin-bottom: 0;
+  position: absolute;
+  top: 120%;
+  /* left: 0%;
+  width: 200px; */
+}
+
+.verification-circle {
+  border: 1px solid var(--primary);
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  color: var(--secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.verification-hr {
+  background-color: var(--primary);
+  border-color: var(--primary);
+  width: 150px;
+  height: 1px !important;
+  margin: 0;
+  opacity: 1 !important;
+}
+
+.circle-done {
+  background-color: var(--primary);
+  color: var(--text-white);
+}
+
+
+.deposit-line {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 70px 0 120px 0;
+}
+
+.deposit-item {
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.deposit-item .deposit-content {
+  margin-bottom: 0;
+  position: absolute;
+  top: 120%;
+   left: 0%;
+  width: 200px; 
+ text-align: start;
+
+}
+
+.deposit-circle {
+  border: 1px solid var(--primary);
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  color: var(--secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deposit-hr {
+  background-color: var(--primary);
+  border-color: var(--primary);
+  width: 200px;
+  height: 2px !important;
+  margin: 0;
+  opacity: 1 !important;
+}
+
+
+.deposit-flex{
+
+display: flex;
+align-items: center;
+padding: 3rem !important;
+}
+
+.deposit-flex img{
+
+  margin-right: 3rem;
+  
+}
+
+
+.coins-section ul{
+
+  padding: 0;
+
+}
+
+.form-group-flex{
+
+  display: flex;
+
+}
+
+.form-group-flex p{
+
+  flex-basis: 20%;
+
+}
+
+
+.form-group-flex .group-basis{
+
+  flex-basis: 80%;
+
+}
+
+
+.form-group-flex i{
+position:absolute;
+right: 10px;
+
+}
+
+.query ul{
+
+list-style: none;
+padding: 0;
+line-height: 30px;
+margin: 20px 0;
+
+}
+
+.learn-more{
+
+  color: var(--text-black);
+
+}
+
+
+.network-list{
+
+  padding: 0;
+  list-style: none;
+
+}
+
+
+
+.network-list li{
+
+ border-bottom: 2px solid var(--text-disable);
+ padding: 1.5rem 0;
+
+}
+
+
+.network-list li p{
+
+margin: 0;
+ 
+ }
+ .black-header{
+   background: var(--text-black);
+   padding: 2rem;
+   display: flex;
+   justify-content: space-between;
+   box-shadow: var(--shadow);
+ }
+ .black-header a{
+   text-decoration: none;
+   font-size: 20px;
+   padding: 0 1rem;
+   color: var(--text-white);
+ }
+ .white-header{
+  background: var(--text-white);
+  padding: 1.5rem 2rem;
+  display: flex;
+  box-shadow: var(--shadow);
+ }
+ .white-header .ul a{
+  text-decoration: none;
+  font-size: 20px;
+  padding: 0 1rem;
+  color: var(--primary);
+}
+.white-header-box{
+  background: var(--light-bg);
+  padding: 0 1rem;
+  text-decoration: none;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+.white-header-box a{
+  text-decoration: none;
+  color: var(--text-black);
+  font-size: 20px;
+  margin-right: 1rem;
+  padding: 3px;
+}
+.white-header-box .h-active{
+  color: var(--text-white);
+  background: var(--text-green);
+  border-radius: 10px;
+}
+.trading-section{
+  margin-top: 2rem;
+}
+.trading-section .filter{
+  display: flex;
+ 
+}
+.filter .custom-input-group{
+display: flex;
+flex-direction: column;
+margin-right: 1rem;
+}
+.filter .custom-input-group .search{
+border: 2px solid gray;
+}
+.coin-section-ab .normal-btn img{
+  width: 22px;
+}
+.normal-btn{
+  background: white;
+  border: 1px solid gray;
+  border-radius: 3px;
+}
+.td-flex{
+  display: flex;
+  align-items: center;
+}
+.td-flex p{
+  margin: 0;
+  color: gray;
+}
+.td-flex .icon{
+  background: var(--text-green);
+  padding: 0 0.5rem;
+  border-radius: 50px;
+}
+.ml-1{
+  margin-left: 1rem;
+}
+.btn-gray{
+  background: var(--gray) !important;
+  color: var(--text-white) !important;
+  border-color: var(--gray) !important;
+}
+.buy-trade-box{
+  margin-top: 3rem;
+}
+.buy-trade-box img{
+  width: 75%;
+  margin-bottom: 1rem;
+}
+.faq-section-light{
+  background: var(--light-bg);
+  padding: 1rem 0;
+}
+.custom-accordion{
+  padding: 0;
+  list-style: none;
+}
+.custom-accordion li{
+  padding: 1rem 0;
+  cursor: pointer;
+}
+.custom-accordion .accordion-content{
+  margin-left: 1.7rem;
+  margin-right: 1.7rem;
+  padding-top: 1rem;
+  font-size: 17px;
+}
+.custom-accordion-hide{
+  height: 0px !important;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.custom-accordion-show{
+  height: auto !important;
+  overflow: hidden;
+  opacity: 5;
+  transition: all 1s;
+}
+.custom-accordion i{
+  background: var(--primary);
+  color: var(--text-white);
+  padding: 0.3rem 0.3rem;
+  border-radius: 50px;
+  margin-right: 5px;
+}
+.custom-accordion li span{
+  font-size: 20px;
 }
