--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -1854,3 +1854,14 @@ margin-left: 5px;
 .payment-btn-group{
   display: flex;
 }
+.flex-div{
+  display: flex;
+  align-items: center;
+}
+.flex-div span{
+  margin-left: 5px;
+
+}
+.flex-div input{
+  accent-color: var(--primary);
+}
